# llm-assistant

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_exe.ps1  main.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_windows.bat
.github/: ABOUT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: GITHUB_RELEASE_V2.md  SECURITY_AUDIT.md
llm_assistant/: __init__.py  app.py  common.py  context_manager.py  file_manager.py  input_tools.py  language_manager.py  llm_client.py  model_manager.py  security_manager.py  server_manager.py  sessions.py  ui.py  utilities.py  web_search.py
scripts/: clean_for_github.ps1
tests/: conftest.py  smoke_test.py  test_chat_copy.py  test_clear_all.py  test_language.py  test_multi_server.py  test_password_security.py  test_security.py  test_session_reset.py  test_stop_generation.py  test_v18_context_profiles.py  test_v20_control_deck.py
