[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-assistant"
version = "1.01"
description = "Local desktop assistant for OpenAI-compatible LLM servers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Vito" }
]
keywords = ["llm", "ollama", "lm-studio", "qwen", "code-assistant", "tkinter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "requests>=2.32,<3",
  "python-dotenv>=1.0,<2",
  "beautifulsoup4>=4.12,<5",
  "duckduckgo-search>=7,<9",
  "tkinterdnd2>=0.4,<1",
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.5,<1"]
dev = [
  "pytest>=8,<10",
  "bandit>=1.8,<2",
  "pip-audit>=2.7,<3",
  "pyinstaller>=6,<7",
]

[project.scripts]
llm-assistant = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["llm_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603"]
